name:                openrdb-api
version:             1.0.0
synopsis:            OpenRDB REST API
homepage:            https://www.github.com/openrdb/api
license:             BSD2
license-file:        LICENSE
author:              Ricky Elrod <ricky@elrod.me>
                     Jimmy Carter <kg4sgp@gmail.com>
maintainer:          Ricky Elrod <ricky@elrod.me>
copyright:           (c) 2014 Ricky Elrod <ricky@elrod.me>
                              Jimmy Carter <kg4sgp@gmail.com>
category:            Web
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:  LICENSE

library
  default-language:  Haskell2010
  ghc-options:       -Wall
  hs-source-dirs:    api
  exposed-modules:
    Api
    ApiTypes
  build-depends:
      base >= 4.6 && < 4.8
    , aeson >= 0.7 && < 0.8
    , hxt >= 9.3 && < 9.4
    , json-schema >= 0.6 && < 0.7
    , mtl >= 2.0 && < 2.3
    , rest-core >= 0.31 && < 1
    , rest-types >= 1.10 && < 2
    , transformers >= 0.2 && < 0.4
    , text >= 0.10 && < 1.2
    , transformers-base >= 0.4 && < 0.5

executable rest-example-gen
  default-language:  Haskell2010
  ghc-options:       -Wall
  main-is:           Main.hs
  hs-source-dirs:    generate
  build-depends:
      base >= 4.6 && < 4.8
    , mtl >= 2.0 && < 2.3
    , rest-core >= 0.31 && < 1
    , openrdb-api
    , rest-gen >= 0.14 && < 1
